[package]
name = "mrtd"
version = "0.1.0"
description = "Parser for machine-readable travel documents (MRTD)"
authors = ["António Marques <me@antoniomarques.eu>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/asmarques/mrtd"
readme = "README.md"
keywords = ["mrtd", "icao", "mrz", "passport", "travel"]
categories = ["parser-implementations", "encoding"]

[dependencies]
chrono = "0.4"
regex = "1"
lazy_static = "1.1"