[package]
name = "mrtd"
version = "0.5.2"
description = "Parser for machine-readable travel documents (MRTD)"
authors = [
  "António Marques <me@antoniomarques.eu>",
  "Metin Binbir <binbir.metin@hotmail.com>",
]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/asmarques/mrtd"
readme = "README.md"
keywords = ["mrtd", "icao", "mrz", "passport", "travel"]
categories = ["parser-implementations", "encoding"]

[features]
serde = ["dep:serde", "chrono/serde"]

[dependencies]
chrono = "0.4"
regex = "1"
lazy_static = "1.1"
serde = { version = "1", optional = true, features = ["derive"] }
